sadik: left nav overlaping issues

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -13,6 +13,7 @@
     /* padding: 15px 20px; */
     left: -230px;
     /* overflow: auto; */
+    z-index: 999;
 }
 
 .account-search .input-group-addon {
